--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.jurtz.marcel.shoppinglist.MainActivity">
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_done"
-        app:layout_anchor="@id/lvToDoList"
-        app:layout_anchorGravity="bottom|right|end" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvShoppingLists"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="8dp" />
 
-</CoordinatorLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddNewShoppingList"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_margin="8dp"
+        android:src="@drawable/ic_add_24dp"
+        android:tint="@color/colorPrimary"
+        app:layout_anchorGravity="right|bottom"
+        app:layout_anchor="@+id/rvShoppingLists" />
+
+</android.support.design.widget.CoordinatorLayout >
