--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,40 @@
     android:layout_height="match_parent"
     tools:context="com.jurtz.marcel.shoppinglist.MainActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/llNewShoppingList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/txtAddNewShoppingList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/txt_add_shopping_list_hint"/>
+
+            <Button
+                android:id="@+id/cmdAddNewShoppingList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="@string/cmd_add_shopping_list_text"/>
+
+        </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvShoppingLists"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/llNewShoppingList"
         android:layout_margin="8dp" />
+
+    </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAddNewShoppingList"
