--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="dialog_padding_top">10dp</dimen>
+    <dimen name="dialog_margin_horizontally">24dp</dimen>
 </resources>
