--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jurtz.marcel.shoppinglist.ShoppingListActivity"
+    tools:context="com.jurtz.marcel.shoppinglist.com.jurtz.marcel.sist.DetailView"
     android:id="@+id/clShoppingList">
 
     <android.support.design.widget.AppBarLayout
